# morphocell

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  black.toml  pyproject.toml  setup.py
.github/workflows/: lint-format.yml
cubic/: __init__.py  image_utils.py  skimage.py  utils.py
cubic/feature/: __init__.py  mesh.py  voxel.py
cubic/metrics/: feature.py
cubic/metrics/frc/: analysis.py  frc.py  iterators.py
cubic/preprocessing/: deconvolution.py  richardson_lucy_xp.py
cubic/segmentation/: _clear_border.py  cellpose.py
examples/data/: README.md
examples/notebooks/: deconvolution_iterations.ipynb
morphocell/: __init__.py  cuda.py  gpu.py  image.py  image_utils.py  plot_utils.py  scipy.py  skimage.py  utils.py
morphocell/feature/: __init__.py  mesh.py  voxel.py  voxel_morphometry.py
morphocell/metrics/: __init__.py  average_precision.py  feature.py  frc.py  map.py  skimage_metrics.py
morphocell/metrics/frc/: __init__.py  analysis.py  frc.py  frc_utils.py  iterators.py  itk.py
morphocell/preprocessing/: __init__.py  deconvolution.py  richardson_lucy_xp.py  thresholding.py
morphocell/segmentation/: __init__.py  _clear_border.py  cellpose.py  segment_utils.py
tests/: conftest.py  test_cuda.py  test_image_utils.py  test_scipy_proxy.py  test_skimage_proxy.py
tests/feature/: test_voxel.py
tests/metrics/: test_average_precision.py  test_skimage_metrics.py
tests/metrics/frc/: test_frc.py
tests/preprocessing/: test_deconvolution.py  test_thresholding.py
tests/segmentation/: test_cellpose.py  test_clear_border.py
