[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morphocell"
dynamic = ["version"]
description = "CUDA-accelerated 3D BioImage Computing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alexandr Kalinin", email = "alxndrkalinin@gmail.com" }
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-image>=0.16.1",
    "trimesh>=3.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/alxndrkalinin/morphocell"
Repository = "https://github.com/alxndrkalinin/morphocell"

[project.optional-dependencies]
cellpose = [
    "cellpose>=2.0,<4.0",
]
dev = [
    "ruff",
    "mypy",
    "pooch",
    "pytest",
    "pre-commit",
]
all = [
    "morphocell[cellpose]",
    "morphocell[dev]",
]

[tool.setuptools.dynamic]
version = { attr = "morphocell.__version__" }

[tool.setuptools.packages.find]
exclude = ["examples*"]

[tool.mypy]
python_version = "3.10"
ignore_errors = true

[tool.ruff.lint]
select = ["D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
length-sort = true
